[gd_scene load_steps=6 format=3 uid="uid://ciyscr1kgpgnf"]

[ext_resource type="Script" path="res://scripts/player/cam_setup.gd" id="1_fp4cd"]
[ext_resource type="Shader" path="res://shaders/screen/ntsc.gdshader" id="2_55hn4"]
[ext_resource type="Material" uid="uid://dr52yj2jvqaa7" path="res://post_process/dither-banding_mat.tres" id="2_ise61"]
[ext_resource type="AudioStream" uid="uid://02ad31s7y0pf" path="res://sfx/textbox/textboxclose.wav" id="7_cbawt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jhksb"]
shader = ExtResource("2_55hn4")
shader_parameter/effect = null
shader_parameter/ntsc_enable = false

[node name="PSXLayer" type="CanvasLayer"]
script = ExtResource("1_fp4cd")

[node name="NTSC" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_jhksb")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch = true
metadata/_edit_use_anchors_ = true

[node name="NTSC_viewport" type="SubViewport" parent="NTSC"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
audio_listener_enable_2d = true
audio_listener_enable_3d = true
size = Vector2i(320, 240)
render_target_update_mode = 4

[node name="Dither" type="SubViewportContainer" parent="NTSC/NTSC_viewport"]
material = ExtResource("2_ise61")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="dither_view" type="SubViewport" parent="NTSC/NTSC_viewport/Dither"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
audio_listener_enable_2d = true
audio_listener_enable_3d = true
size = Vector2i(320, 240)
render_target_update_mode = 4

[node name="HUD" type="Node2D" parent="NTSC/NTSC_viewport/Dither/dither_view"]

[node name="textboxes" type="Node2D" parent="NTSC/NTSC_viewport/Dither/dither_view/HUD" groups=["HUD"]]

[node name="dialogue_close" type="AudioStreamPlayer" parent="NTSC/NTSC_viewport/Dither/dither_view/HUD/textboxes"]
stream = ExtResource("7_cbawt")
volume_db = 10.0

[node name="player_camera" type="Camera3D" parent="NTSC/NTSC_viewport/Dither/dither_view"]
transform = Transform3D(-4.37114e-08, -0.309017, 0.951057, 0, 0.951057, 0.309017, -1, 1.35076e-08, -4.1572e-08, 8, 2.62875, 0)
current = true
fov = 35.0
